--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ modules/dotnet/common/obj/x64/Debug/net8.0/common.sourcelink.json
 modules/dotnet/common/obj/x64/Debug/net8.0/common.AssemblyInfo.cs
 modules/dotnet/EpsilonSharp/obj/x64/Debug/net8.0/EpsilonSharp.sourcelink.json
 modules/dotnet/EpsilonSharp/.vs
+
+projects
+thirdparty
