--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -531,8 +531,8 @@ if(NOT ${IS_CI_ENV})
     add_subdirectory(examples/bsp)
     add_subdirectory(examples/chess)
     add_subdirectory(editor)
-    add_subdirectory(projects/towerdefense)
-    add_subdirectory(projects/uiapp)
+    add_subdirectory(projects/TowerDefense)
+    #add_subdirectory(projects/uiapp)
 endif()
 #if(${Mono_FOUND})
 #add_subdirectory(examples/mono-managed)
