--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -445,6 +445,7 @@ else()
     target_link_libraries(${PROJECT_NAME} PRIVATE openal)
 
     set(CMAKE_CXX_FLAGS_RELEASE "-O2 -fsized-deallocation")
+    #set(CMAKE_CXX_FLAGS_DEBUG "-O2")
 endif()
 
 
