--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.6.0)
 set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
 set(DBUILD_SHARED_LIBS ON CACHE BOOL "Build as a shared library")
 set(DGENERATE_RPM_PACKAGE OFF CACHE BOOL "Generate RPM deployment package")
@@ -176,6 +177,7 @@ ExternalProject_Add(json
     CONFIGURE_COMMAND ""
 )
 
+
 ExternalProject_Get_property(json SOURCE_DIR)
 set(JSON_BUILD_DIR ${SOURCE_DIR})
 message(${JSON_BUILD_DIR})
@@ -219,10 +221,10 @@ if(WIN32)
     set(CMAKE_OPENAL_ARGS "")
 else()
     if(BUILD_ANDROID)
-        set(CMAKE_OPENAL_ARGS "-DALSOFT_REQUIRE_PULSEAUDIO=ON -DALSOFT_REQUIRE_PIPEWIRE=ON -DCMAKE_INSTALL_PREFIX=install/arm64-v8a -DCMAKE_TOOLCHAIN_FILE=\"J:\\AndroidSDK\\ndk\\26.0.10404224-beta1\\build\\cmake\\android.toolchain.cmake\" -DANDROID_PLATFORM=34 -DANDROID_STL=c++_shared -DANDROID_CPP_FEATURES=\"rtti exceptions\" -DANDROID_ABI=arm64-v8a 
+        set(CMAKE_OPENAL_ARGS "-DALSOFT_REQUIRE_PULSEAUDIO=ON -DALSOFT_REQUIRE_PIPEWIRE=ON -DCMAKE_INSTALL_PREFIX=install/arm64-v8a -DCMAKE_TOOLCHAIN_FILE=\"J:\\AndroidSDK\\ndk\\26.0.10404224-beta1\\build\\cmake\\android.toolchain.cmake\" -DANDROID_PLATFORM=34 -DANDROID_STL=c++_shared -DANDROID_CPP_FEATURES=\"rtti exceptions\" -DANDROID_ABI=arm64-v8a
     -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
     else()
-        set(CMAKE_OPENAL_ARGS "-DALSOFT_REQUIRE_PULSEAUDIO=ON -DALSOFT_REQUIRE_PIPEWIRE=ON -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+        set(CMAKE_OPENAL_ARGS "-DALSOFT_BACKEND_PULSEAUDIO=ON -DALSOFT_REQUIRE_PULSEAUDIO=ON -DALSOFT_REQUIRE_PIPEWIRE=ON -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DALSOFT_BACKEND_PIPEWIRE=ON")
     endif()
 endif()
 
