--- a/imgui.ini
+++ b/imgui.ini
@@ -1,136 +1,92 @@
 [Window][Main Window]
 Pos=0,70
-Size=1280,650
+Size=1920,936
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=-15,220
-Size=1057,629
+Pos=60,60
+Size=400,400
 Collapsed=0
+
+[Window][Inspector]
+Pos=0,70
+Size=245,297
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Main Viewport]
+Pos=247,70
+Size=1338,936
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Scene Nodes]
+Pos=1587,70
+Size=333,460
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Assets]
+Pos=1587,532
+Size=333,474
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Post-Process]
+Pos=1587,70
+Size=333,460
+Collapsed=0
+DockId=0x00000007,2
+
+[Window][Themes]
+Pos=254,853
+Size=330,147
+Collapsed=0
+
+[Window][Material]
+Pos=0,607
+Size=245,399
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Reload Assembly]
+Pos=1587,70
+Size=333,460
+Collapsed=0
+DockId=0x00000007,1
 
 [Window][Info]
 Pos=10,120
 Size=213,312
 Collapsed=1
 
-[Window][Main Viewport]
-Pos=285,70
-Size=523,650
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][Inspector]
-Pos=0,70
-Size=283,242
-Collapsed=0
-DockId=0x0000000B,0
-
-[Window][Gizmo]
-Pos=344,29
-Size=1057,629
-Collapsed=0
-
-[Window][Debug]
-Pos=1116,551
-Size=121,104
-Collapsed=0
-
 [Window][Properties]
-Pos=810,474
-Size=243,246
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Ventana de ejemplo]
-Pos=1460,20
-Size=220,997
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][My window]
-Pos=590,316
-Size=314,202
-Collapsed=0
-
-[Window][Scene Nodes]
-Pos=810,70
-Size=243,392
-Collapsed=0
-DockId=0x0000000F,0
-
-[Window][Object Script Properties]
-Pos=347,225
-Size=238,383
-Collapsed=0
-
-[Window][Reload Assembly]
-Pos=0,667
-Size=283,53
+Pos=0,369
+Size=245,236
 Collapsed=0
 DockId=0x0000000A,0
 
-[Window][Material]
-Pos=0,314
-Size=283,351
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Assets]
-Pos=1055,70
-Size=225,650
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][select_model_popup]
-Pos=60,60
-Size=125,164
-Collapsed=0
-
-[Window][Model Popup]
-Pos=689,440
-Size=460,203
-Collapsed=0
-
-[Window][New Node]
-Pos=160,90
-Size=960,540
-Collapsed=0
-
-[Window][Post-Process]
-Pos=810,464
-Size=243,256
-Collapsed=0
-DockId=0x00000010,0
-
-[Table][0x6B582E0B,2]
-RefScale=16
+[Table][0xDDFA72B0,1]
 Column 0  Weight=1.0000
-Column 1  Width=4
 
 [Table][0x0B9ACFB3,2]
 RefScale=16
 Column 0  Weight=1.0000
-Column 1  Width=53
+Column 1  Width=58
 
 [Table][0x73E67717,1]
 Column 0  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1280,650 Split=X Selected=0xB90D41F9
-  DockNode            ID=0x00000001 Parent=0x9AC0FB4B SizeRef=283,947 Split=Y Selected=0xE7039252
-    DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=233,353 Selected=0xE7039252
-    DockNode          ID=0x0000000C Parent=0x00000001 SizeRef=233,592 Split=Y Selected=0x6AA6D9AC
-      DockNode        ID=0x00000009 Parent=0x0000000C SizeRef=233,513 Selected=0x6AA6D9AC
-      DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=233,77 Selected=0xCC66F945
-  DockNode            ID=0x00000002 Parent=0x9AC0FB4B SizeRef=1635,947 Split=X
-    DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=818,700 Split=X Selected=0xB90D41F9
-      DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1163,947 CentralNode=1 Selected=0xB90D41F9
-      DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=470,947 Split=X Selected=0x2A411669
-        DockNode      ID=0x00000003 Parent=0x0000000E SizeRef=243,650 Split=Y Selected=0x2A411669
-          DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=372,589 Split=Y Selected=0x2A411669
-            DockNode  ID=0x0000000F Parent=0x00000004 SizeRef=295,355 Selected=0x2A411669
-            DockNode  ID=0x00000010 Parent=0x00000004 SizeRef=295,232 Selected=0x4DFD600F
-          DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=372,361 Selected=0x199AB496
-        DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=225,650 Selected=0x26CE0345
-    DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=220,700 Selected=0xD1FBC3F2
+DockSpace         ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1920,936 Split=X Selected=0x2A411669
+  DockNode        ID=0x00000005 Parent=0x9AC0FB4B SizeRef=1585,650 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=245,650 Split=Y Selected=0xE7039252
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=204,535 Split=Y Selected=0xE7039252
+        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=204,297 Selected=0xE7039252
+        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=204,236 Selected=0x199AB496
+      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=204,399 Selected=0x6AA6D9AC
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=770,650 CentralNode=1 Selected=0xB90D41F9
+  DockNode        ID=0x00000006 Parent=0x9AC0FB4B SizeRef=333,650 Split=Y Selected=0x2A411669
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=362,319 Selected=0x2A411669
+    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=362,329 Selected=0x26CE0345
 
