--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -374,6 +374,7 @@ set(PROJECT_FILES
     ${CMAKE_SOURCE_DIR}/core/framework/window.cpp
     ${CMAKE_SOURCE_DIR}/core/framework/clock.cpp
     ${CMAKE_SOURCE_DIR}/core/framework/loaders/model.cpp
+    ${CMAKE_SOURCE_DIR}/core/framework/log.cpp
     ${CMAKE_SOURCE_DIR}/Epsilon.hpp
     ${CMAKE_SOURCE_DIR}/Epsilon.cpp
     ${CMAKE_SOURCE_DIR}/core/framework/singleton.hpp
